--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,21 @@
 {
-    "compilerOptions": {
-        "module": "ES6",
-        "target": "ES6",
-        "lib": ["es2016", "dom"],
-        "moduleResolution": "node",
-        "allowJs": true, 
-        "checkJs": false,
-        "outDir": "dist",
-        "rootDir": "./",
-        "baseUrl": "./",
-        "paths": {
-            "*": ["src/js/*"]
-        },
-        "declaration": true,
-        "sourceMap": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
-    },
-    "exclude": [
-        "node_modules"
-    ],
-    "include": [
-        "src/**/*.ts",
-    ],
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+
+    "strict": true,
+    "noImplicitOverride": true,
+
+    "module": "nodenext",
+    "outDir": "dist",
+    "sourceMap": true,
+    "declaration": true,
+
+    "lib": ["es2022", "dom"]
+  }
 }
