adding worker to offload task from main thread

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "sourceMap": true,
     "declaration": true,
 
-    "lib": ["es2022", "dom"]
+    "lib": ["es2022", "dom", "WebWorker"]
   }
 }
